# fastapi_streaming

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/src/fastapi_app/: alembic.ini  database.py  main.py
backend/src/fastapi_app/meta/: meta.py
backend/src/fastapi_app/middlewares/: cors.py
backend/src/fastapi_app/migrations/: env.py
backend/src/fastapi_app/migrations/versions/: ae8bea6b1f47_initial_migration.py
backend/src/fastapi_app/models/: item.py  user.py
backend/src/fastapi_app/routers/: items.py  users.py
backend/src/fastapi_app/schemas/: item.py  user.py
backend/src/fastapi_app/services/: item_service.py  user_service.py
backend/src/fastapi_app/tests/: test_items.py
frontend/: package-lock.json  tsconfig.json
frontend/src/: App.module.css  App.tsx  Counter.tsx  index.tsx
frontend/src/router/: index.tsx
